--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,7 @@
 Options -Multiviews
 RewriteEngine On
 
-RewriteBase /rabii/public
+RewriteBase /wikipedia/public
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
